feat: added functions

--- a/css/style.css
+++ b/css/style.css
@@ -12,29 +12,52 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: rgb(106, 28, 106);
+  background-color: #333;
+  color: #fff;
   font-family: "Poppins", sans-serif;
   text-align: center;
-  color: #fff;
 }
 
-main h1 {
+h1 {
   font-size: 3rem;
   text-transform: uppercase;
 }
 
-main p {
+p {
   margin: 1rem 0;
   font-size: 1.5rem;
 }
 
-main button {
-  background: #000;
+button {
+  background-color: #000;
   color: #fff;
-  border: none;
-  outline: none;
-  padding: 12px 22px;
-  border-radius: 10px;
-  font-size: 1.2rem;
+  display: inline-block;
+  margin: 0 5px 10px 0;
+  padding: 12px 40px;
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: #fff 4px 4px 0 0, #000 4px 4px 0 1px;
+  font-size: 1.1rem;
+  line-height: 20px;
+  font-weight: 400;
+  overflow: visible;
   cursor: pointer;
+}
+
+button:focus {
+  text-decoration: none;
+}
+
+button:hover {
+  text-decoration: none;
+}
+
+button:active {
+  box-shadow: rgba(0, 0, 0, 0.125) 0 3px 5px inset;
+  outline: 0;
+}
+
+button:not([disabled]):active {
+  box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+  transform: translate(2px, 2px);
 }
